--- a/main_style.css
+++ b/main_style.css
@@ -1,3 +1,104 @@
+html, body {
+    height: 100% !important;
+    min-height: 100% !important;
+}
+
+
+.top-sticky {
+    top: 0;
+    position: fixed;
+    min-width: 100%;
+    z-index: 99999;
+}
+
 .header {
-    color: orange;
+    background-color: #F5F5F5;
+}
+
+.navi {
+    background-color: white;
+}
+
+section {
+    height: 100%;
+}
+
+a.nav-link {
+    color: black;
+}
+
+a.nav-link:hover {
+    color: #E37A36;
+}
+
+
+.logo {
+    width: 20%;
+}
+
+.main-hero-image {
+    background: url(./images/solar-872804_1920.jpg)  no-repeat center; 
+    background-size: cover;
+    height: 500px;
+    position: relative;
+    top: 15%;
+}
+
+.main-hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 2px 2px 5px black;
+}
+
+.main-hero-text h1 {
+    background-color: #E37A36;
+    margin-top: 30px;
+    font-size: 4vw;
+}
+
+
+.welcome {
+    background-color: white;
+    height: 100%;
+    margin-top: 100px;
+    padding-top: 100px;
+}
+
+.welcome col-6 {
+    padding-top: 100px 100px 100px 100px;
+}
+
+.welcome-text {
+    padding-left: 200px;
+}
+
+.benefits {
+    background-color: #F5F5F5;
+    height: 100%;
+    margin-top: 100px;
+    padding-top: 100px;
+}
+
+.benefits-text {
+    padding-left: 200px;
+}
+
+.benefits-image {
+    padding-left: 0px;
+}
+
+.panels {
+    background-color: white;
+}
+
+.contact {
+    background-color: #F5F5F5;
+}
+.footer {
+    background-color:rgb(37,37,37);
+    min-height: 50%;
 }
