--- a/main_style.css
+++ b/main_style.css
@@ -3,11 +3,13 @@
 **********************************************************************************************************/
 body {
     color: #000000;
-    font-family: 'Karla', sans-serif;
-    /*font-family: 'Montserrat', sans-serif;
-    font-family: 'Encode Sans Condensed', sans-serif;
+    /* font-family: 'Karla', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
+   /* font-family: 'Encode Sans Condensed', sans-serif;
     font-family: 'Prompt', sans-serif;
     font-family: 'Barlow Condensed', sans-serif;*/
+    letter-spacing: 1.75px;
+    position: relative;
 }
 
 /**********************************************************************************************************
@@ -15,6 +17,24 @@ body {
 **********************************************************************************************************/    
 .nav-styles {
     background-color: white !important;
+    font-size: 0.8rem;
+}
+
+.nav-styles li {
+    background-color: white !important;
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
+.nav-styles .nav-link-styles {
+    color: black !important;
+}
+.nav-styles .nav-link-styles:hover {
+    color: rgb(227, 122, 54) !important;
+}
+
+.nav-styles .nav-link-styles:active {
+    color: rgb(227, 122, 54) !important; 
 }
 
 /**********************************************************************************************************
@@ -49,11 +69,14 @@ body {
 
 #home-section h4 {
     text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 900 !important;
 }
 
 #home-section h1 {
     background-color: rgb(227, 122, 54);
-    width: 25%;
+    font-weight: 900 !important;
+    text-shadow: 2px 0 white;
 }
 
 /**********************************************************************************************************
@@ -68,48 +91,60 @@ body {
 /**********************************************************************************************************
     How solar works section styling
 **********************************************************************************************************/ 
-   
+@media screen and (min-width: 600px) {
+    #how-solar-works-section .how-panels-work {
+        background-color: #F5F5F5;
+        color: black;
+        z-index: 0;
+        min-width: 100%;
+        position: relative;
+        left: -10%;
+        padding-left: 250px !important;
+    }
+
+    #how-solar-works-section .what-made-of {
+        background-color:  rgb(37,37,37);
+        color: white;
+        z-index: 1;
+        position: relative;
+        left: 7%;
+        padding-top: 100px !important;
+        padding-right: 170px !important;
+    }
+    
+    #how-solar-works-section .workman-image {
+        -moz-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
+        -webkit-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
+        box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2); 
+        z-index: 2;
+        width: auto;
+        position: relative;
+        top: 7%;
+        left:30%;
+    }
+
+    #how-solar-works-section .workshop-image {
+        -moz-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
+        -webkit-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
+        box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2); 
+        z-index: 3 !important;
+        width: auto;
+        position: relative;
+        left: -10%;
+        top: 15%;
+        height: auto;
+    }
+
+}
+
 #how-solar-works-section .how-panels-work {
     background-color: #F5F5F5;
     color: black;
-    z-index: 0;
-    min-width: 100%;
-    position: relative;
-    left: -10%;
-    padding-left: 250px !important;
 }
 
 #how-solar-works-section .what-made-of {
     background-color:  rgb(37,37,37);
     color: white;
-    z-index: 1;
-    position: relative;
-    left: 7%;
-    padding-top: 100px !important;
-    padding-right: 170px !important;
-}
-
-#how-solar-works-section .workman-image {
-    -moz-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
-    box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2); 
-    z-index: 2;
-    width: auto;
-    position: relative;
-    top: 7%;
-    left:30%;
-}
-
-#how-solar-works-section .workshop-image {
-    -moz-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2);
-    box-shadow: 20px 20px 70px rgba(0, 0, 0, 0.2); 
-    z-index: 3 !important;
-    width: auto;
-    position: relative;
-    left: -10%;
-    top: 15%;
-    height: auto;
 }
 
 /**********************************************************************************************************
